--- a/mobile/aboutus.html
+++ b/mobile/aboutus.html
@@ -30,7 +30,7 @@
 </div>
 
     <div class="my_page">
-        <img class="info_img" src="./image/us.png"/>
+        <img class="info_img" src="./image/us.jpg"/>
 
         <div class="discreption">
             <div>幸福创客，专注心里健康科技领域。</div>
