--- a/mobile/shehuizeren.html
+++ b/mobile/shehuizeren.html
@@ -32,7 +32,7 @@
 
 <div class="my_page">
 
-    <img src="./image/shehuizeren0.png" class="info_img">
+    <img src="./image/shehuizeren0.jpg" class="info_img">
 
     <div style="background-color: white;padding-bottom: 20px">
 
