--- a/mobile/used.html
+++ b/mobile/used.html
@@ -30,7 +30,7 @@
 </div>
 
     <div class="my_page">
-        <img class="info_img" src="./image/second.png"/>
+        <img class="info_img" src="./image/second.jpg"/>
 
 
         <div class="vip-made" style="color: white; font-size: 14px; margin: 20px;">
