--- a/mobile/welcome.html
+++ b/mobile/welcome.html
@@ -32,7 +32,7 @@
 
 <div class="my_page">
 
-    <img class="info_img" src="./image/us.png"/>
+    <img class="info_img" src="./image/us.jpg"/>
     <div class="welcome_content" style="padding-bottom:20px;">
         <div>幸福創客就是把一群人聚在一起，提供資源和机会，最有效率地发挥集體的聪明才智，創造幸福平台。我們称作公司，只是为了实现这些单独个体实现不了的事情。我们存在的意义是透過科技提升人類心理幸福，使之更幸福、更健康。</div>
 
@@ -43,7 +43,7 @@
 
         <div>你需要开发高性能、大规模的数据处理、搜索和分析的平台和服务，以及面向多个行业的产品</div>
 
-        <img src="./image/welcome1.png" class="info_img"/>
+        <img src="./image/welcome1.jpg" class="info_img"/>
 
         <div style="text-align: center;margin-top: 10px">【我们希望你是这样的】</div>
         <div>
@@ -56,7 +56,7 @@
         <div class="welcome-name">IOS开发工程师</div>
         <div>你需要设计师最完美的想法开发出来，推送到所有使用苹果手机的用户端；</div>
 
-        <img class="info_img"  src="./image/welcome2.png"/>
+        <img class="info_img"  src="./image/welcome2.jpg"/>
         <div style="text-align: center;margin-top: 10px;font-size: 13px;">【我们希望你是这样的】：</div>
         <div>
             1、对移动产品有浓厚兴趣，注重用户体验；<br />
@@ -70,7 +70,7 @@
         <div class="welcome-name">Android开发工程师</div>
 
         <div>你需要为Android手机用户开发出我们的产品，让他们体会到一键找到幸福的感觉</div>
-        <img class="info_img"  src="./image/welcome3.png"/>
+        <img class="info_img"  src="./image/welcome3.jpg"/>
         <div style="text-align: center;margin-top: 10px;font-size: 13px;">【我们希望你是这样的】</div>
         <div>
             1、具备独挡一面的精神，对移动产品有浓厚兴趣；<br />
@@ -83,7 +83,7 @@
         <div class="welcome-name">社区运营</div>
 
         <div>你需要思维活跃，维持社区活跃度和粘性，让爱幸福的人在这玩起来</div>
-        <img class="info_img"  src="./image/welcome4.png"/>
+        <img class="info_img"  src="./image/welcome4.jpg"/>
         <div style="text-align: center;margin-top: 10px;font-size: 13px;">【我们希望你是这样的】</div>
 
         <div>1、社区熟悉各类社区论坛，社交媒体的规则，有敏锐的市场洞察力</div>
@@ -96,7 +96,7 @@
 
         <div class="welcome-name">心理学家</div>
         <div>你需要具备深厚的心理学背景，了解心理学领域最前沿的资讯，让用户感受到心理学带给普通人的变化</div>
-        <img class="info_img"  src="./image/welcome5.png"/>
+        <img class="info_img"  src="./image/welcome5.jpg"/>
         <div style="text-align: center;margin-top: 10px;font-size: 13px;">【我们希望你是这样的】</div>
         <div>1.	心理学博士或心理学在读博士</div>
         <div>2.	编写心理咨询师培训教材，讲授心理学课程</div>
