--- a/mobile/index.html
+++ b/mobile/index.html
@@ -32,7 +32,7 @@
 
     <div class="my_page">
         <a href="#">
-            <img class="info_img" src="./image/first.png"/>
+            <img class="info_img" src="./image/first.jpg"/>
         </a>
 
         <!-- 菜单 -->
