--- a/mobile/aboutus.html
+++ b/mobile/aboutus.html
@@ -33,8 +33,8 @@
         <img class="info_img" src="./image/us.jpg"/>
 
         <div class="discreption">
-            <div>幸福创客，专注心里健康科技领域。</div>
-            <div>创客是指一群酷爱科技，热衷实践，
+            <div>幸福创客，专注心理健康科技领域。</div>
+            <div class="oneline">创客是指一群酷爱科技，热衷实践，
                 以追求极致的知识技术来改变世界的人；
                 幸福创客是一个平台，
                 整合汇聚在全球这样一群卓越非凡，
@@ -48,7 +48,7 @@
         <ul class="expect_list">
             <li>
                 <div style="text-align: center;font-size: 15px;">愿景</div>
-                <div style="margin-left: auto;margin-right: auto;width: 200px;">
+                <div style="margin-left: auto;margin-right: auto;width: 220px;">
                     <div class="small-circle" style="background-color:#018a01;"></div>
                     <span style="font-size: 14px">
                         使人们过的更健康、更幸福
@@ -59,7 +59,7 @@
                 <div style="text-align: center;font-size: 15px;">
                     使命
                 </div>
-                <div style="margin-left: auto;margin-right: auto;width: 200px;">
+                <div style="margin-left: auto;margin-right: auto;width: 220px;">
                     <div class="small-circle" style="background-color:#fbed50;"></div>
                     <span style="font-size: 14px">
                        体验科技创新 缔造幸福无限
@@ -80,7 +80,7 @@
                 <img src="./image/chengjiu.png" class="circle">
                 <span style="height:50px; display:block; color:#FFF; margin-left: 80px;font-size: 14px;">
                     (Customer obsession):<br>
-                    成就所需，超越所想
+                    成就所需、超越所想
                 </span>
             </li>
             <li>
@@ -117,7 +117,7 @@
                 <img src="./image/qizhi.png" class="circle">
                 <span style="height:50px; display:block; color:#FFF; margin-left: 80px;font-size: 14px;">
                     (Exterme):<br>
-                    精益求精，超越极限
+                    精益求精、超越极限
                 </span>
             </li>
             <li>
@@ -129,7 +129,7 @@
                 <img src="./image/zhuanxin.png" class="circle">
                 <span style="height:50px; display:block; color:#FFF; margin-left: 80px;font-size: 14px;">
                     (Focus):<br>
-                    少就是多，大道至简
+                    少就是多、大道至简
                 </span>
             </li>
             <li>
@@ -141,7 +141,7 @@
                 <img src="./image/chuxin.png" class="circle">
                 <span style="height:50px; display:block; color:#FFF; margin-left: 80px;font-size: 14px;">
                     (Beginner's Mind):<br>
-                    心思纯净，心存美好
+                    心思纯净、心存美好
                 </span>
             </li>
         </ul>
@@ -210,7 +210,7 @@
                         <select>
                             <option value="">剑桥大学幸福研究院</option>
                             <option value="">联动天翼科技有限公司</option>
-                            <option value="">全球华人积极心里学会</option>
+                            <option value="">全球华人积极心理学会</option>
                             <option value="">哈弗大学医学院教练中心</option>
                         </select>
                     </div>
