--- a/mobile/ourteam.html
+++ b/mobile/ourteam.html
@@ -85,7 +85,7 @@
 
         <!-- 介绍 -->
         <div class="us_info">
-            <p>最杰出的心里及医学专家</p>
+            <p>最杰出的心理及医学专家</p>
             <p>最创新的科技设计天才</p>
             <p>使命、梦想、热诚把我们团结在一起</p>
             <p>只为了</p>
@@ -123,7 +123,7 @@
 
         <div class="chanpinfuwu_info">
             <h3>庞大的市场和社会价值</h3>
-            <span>处于一个传说中千亿美元的心里健康产业</span><br>
+            <span>处于一个传说中千亿美元的心理健康产业</span><br>
             <span>做推动着人类健康发展刚需的事业</span><br>
             <span>接合专业知识、互联网、高科技及无线创意</span><br>
             <span>只为了</span><br>
@@ -197,7 +197,7 @@
                         <select>
                             <option value="">剑桥大学幸福研究院</option>
                             <option value="">联动天翼科技有限公司</option>
-                            <option value="">全球华人积极心里学会</option>
+                            <option value="">全球华人积极心理学会</option>
                             <option value="">哈弗大学医学院教练中心</option>
                         </select>
                     </div>
