--- a/mobile/shehuizeren.html
+++ b/mobile/shehuizeren.html
@@ -36,13 +36,13 @@
 
     <div style="background-color: white;padding-bottom: 20px">
 
-        <div style="margin: 0px;padding: 10px; font-size: 12px">
+        <div class="oneline" style="margin: 0px;padding: 10px; font-size: 12px">
             <span>让全人类更健康更幸福是幸福创客的初心，也是终极目标</span><br>
 
             <span>我们每一位成员都有一颗热爱公益的心<br>
                 能为这世界做点什么，是我们常常思考的问题</span><br>
 
-            <span>现在我们能力还很有限，<br>但我们相信每一分力量<br>和付出都可以令这个我们生活的地方变得更美好</span><br>
+            <span>现在我们能力还很有限，<br>但我们相信每一分力量和付出都可以令这个我们生活的地方变得更美好</span><br>
         </div>
 
         <div class="shehuizeren_info">
@@ -80,10 +80,10 @@
         </div>
         <div class="shehuizeren_info">
             <img src="./image/shehuizerenlogo4.png"/><br/>
-            <span>点点同梦计划</span>
+            <span>点点童梦计划</span>
             <div class="shehuizeren_content">
                 <div style="border-left-color: #712FAB">
-                    幸福创客与剑桥大学幸福研究院、哈弗医学院教练中心开展“点点童梦”计划，为自闭症、过度活跃症、读写障碍的小朋友提供免费线上辅助训练，并为家长提供与小朋友的沟通相处课程，为小朋友构筑梦想。服务与课程均由幸福创客、剑桥、哈弗的学者，研究生义务提供。
+                    幸福创客与剑桥大学幸福研究院、哈佛医学院教练中心开展“点点童梦”计划，为自闭症、过度活跃症、读写障碍的小朋友提供免费线上辅助训练，并为家长提供与小朋友的沟通相处课程，为小朋友构筑梦想。服务与课程均由幸福创客、剑桥、哈佛的学者、研究生义务提供。
                 </div>
             </div>
 
@@ -153,8 +153,8 @@
                     <select>
                         <option value="">剑桥大学幸福研究院</option>
                         <option value="">联动天翼科技有限公司</option>
-                        <option value="">全球华人积极心里学会</option>
-                        <option value="">哈弗大学医学院教练中心</option>
+                        <option value="">全球华人积极心理学会</option>
+                        <option value="">哈佛大学医学院教练中心</option>
                     </select>
                 </div>
             </li>
