--- a/mobile/index.html
+++ b/mobile/index.html
@@ -37,7 +37,7 @@
 
         <!-- 菜单 -->
         <ul class="main-nav-list">
-            <li>
+            <li >
                 <a href="./aboutus.html">
                     <img src="./image/ahoutus.png">
                     <span>关于我们</span>
@@ -144,7 +144,7 @@
                         <select>
                             <option value="">剑桥大学幸福研究院</option>
                             <option value="">联动天翼科技有限公司</option>
-                            <option value="">全球华人积极心里学会</option>
+                            <option value="">全球华人积极心理学会</option>
                             <option value="">哈弗大学医学院教练中心</option>
                         </select>
                     </div>
