--- a/mobile/aboutus.html
+++ b/mobile/aboutus.html
@@ -79,7 +79,7 @@
                 <!--</div>-->
                 <img src="./image/chengjiu.png" class="circle">
                 <span style="height:50px; display:block; color:#FFF; margin-left: 80px;font-size: 14px;">
-                    (Customer obsession):<br>
+                    Customer obsession<br>
                     成就所需、超越所想
                 </span>
             </li>
@@ -91,7 +91,7 @@
                 <!--</div>-->
                 <img src="./image/zhencheng.png" class="circle">
                 <span style="height:50px; display:block; color:#FFF; margin-left: 80px;font-size: 14px;">
-                    (Authentic):<br>
+                    Authentic<br>
                     真诚做人、坦诚做事
                 </span>
             </li>
@@ -104,7 +104,7 @@
                 <!--</div>-->
                 <img src="./image/xianqu.png" class="circle">
                 <span style="height:50px; display:block; color:#FFF; margin-left: 80px;font-size: 14px;">
-                    (Be an Innovator):<br>
+                    Be an Innovator<br>
                     大世界、思不同
                 </span>
             </li>
@@ -116,7 +116,7 @@
                 <!--</div>-->
                 <img src="./image/qizhi.png" class="circle">
                 <span style="height:50px; display:block; color:#FFF; margin-left: 80px;font-size: 14px;">
-                    (Exterme):<br>
+                    Exterme<br>
                     精益求精、超越极限
                 </span>
             </li>
@@ -128,7 +128,7 @@
                 <!--</div>-->
                 <img src="./image/zhuanxin.png" class="circle">
                 <span style="height:50px; display:block; color:#FFF; margin-left: 80px;font-size: 14px;">
-                    (Focus):<br>
+                    Focus<br>
                     少就是多、大道至简
                 </span>
             </li>
@@ -140,7 +140,7 @@
                     <!--</div>-->
                 <img src="./image/chuxin.png" class="circle">
                 <span style="height:50px; display:block; color:#FFF; margin-left: 80px;font-size: 14px;">
-                    (Beginner's Mind):<br>
+                    Beginner's Mind<br>
                     心思纯净、心存美好
                 </span>
             </li>
