--- a/mobile/ourteam.html
+++ b/mobile/ourteam.html
@@ -112,7 +112,7 @@
 
         <div class="chanpinfuwu_info">
             <h3>顶尖的国际资源及合作平台</h3>
-            <span>连结、开放、分享全球专业与紫原</span><br>
+            <span>连结、开放、分享全球专业与资源</span><br>
             <span>具有共赢心态与世界合作伙伴共享行业成长</span><br>
             <span>汇聚各地一流的精英</span><br>
             <span>只为了</span><br>
@@ -125,7 +125,7 @@
             <h3>庞大的市场和社会价值</h3>
             <span>处于一个传说中千亿美元的心理健康产业</span><br>
             <span>做推动着人类健康发展刚需的事业</span><br>
-            <span>接合专业知识、互联网、高科技及无线创意</span><br>
+            <span>接合专业知识、互联网、高科技及无限创意</span><br>
             <span>只为了</span><br>
             <span>使这个世界更健康、更幸福</span><br>
 
