--- a/mobile/welcome.html
+++ b/mobile/welcome.html
@@ -46,11 +46,11 @@
         <img src="./image/welcome1.jpg" class="info_img"/>
 
         <div style="text-align: center;margin-top: 10px">【我们希望你是这样的】</div>
-        <div>
-            1、计算机相关专业，2年以上java开发工作经验；<br />
-            2、熟悉Java语言，熟悉主流java开源框架，深入理解OOP、OOD思想，具有较强的分析设计能力，熟悉常用设计模式；<br />
-            3、熟悉mysql数据库，有良好的数据库设计能力和sql编写能力；<br />
-            加分项：做过社区类或者聊天类的产品开发&nbsp;</div>
+        <div class="index_line">
+            1、计算机相关专业，2年以上java开发工作经验；</div>
+        <div class="index_line">2、熟悉Java语言，熟悉主流java开源框架，深入理解OOP、OOD思想，具有较强的分析设计能力，熟悉常用设计模式；<br />
+        </div><div class="index_line"> 3、熟悉mysql数据库，有良好的数据库设计能力和sql编写能力；
+    </div><div class="index_line">  加分项：做过社区类或者聊天类的产品开发&nbsp;</div>
 
 
         <div class="welcome-name">IOS开发工程师</div>
@@ -58,27 +58,27 @@
 
         <img class="info_img"  src="./image/welcome2.jpg"/>
         <div style="text-align: center;margin-top: 10px;font-size: 13px;">【我们希望你是这样的】：</div>
-        <div>
-            1、对移动产品有浓厚兴趣，注重用户体验；<br />
-            2、熟练掌握Objective-C语言，Mac&nbsp;OS&nbsp;X，Xcode和ios&nbsp;SDK&nbsp;开发环境；<br />
-            3、具备一定的IOS平台应用程序开发经验，对整个开发环节流程较为熟悉；<br />
-            4、具备IOS后台开发平台及框架原理、开发测试工具、UI设计、项目构建能力，<br />
-            5、参与或自主进行开发过完整应用程序；熟悉App&nbsp;Store上架流程及规则；</div>
+        <div class="index_line">
+            1、对移动产品有浓厚兴趣，注重用户体验；</div>
+        <div class="index_line">2、熟练掌握Objective-C语言，Mac&nbsp;OS&nbsp;X，Xcode和ios&nbsp;SDK&nbsp;开发环境；</div>>
+        <div class="index_line"> 3、具备一定的IOS平台应用程序开发经验，对整个开发环节流程较为熟悉；</div>
+            <div class="index_line">4、具备IOS后台开发平台及框架原理、开发测试工具、UI设计、项目构建能力，</div>
+                <div class="index_line">5、参与或自主进行开发过完整应用程序；熟悉App&nbsp;Store上架流程及规则；</div>
 
-        <div>加分项：做过社区类或者聊天类的apps产品开发</div>
+        <div class="index_line">加分项：做过社区类或者聊天类的apps产品开发</div>
 
         <div class="welcome-name">Android开发工程师</div>
 
         <div>你需要为Android手机用户开发出我们的产品，让他们体会到一键找到幸福的感觉</div>
         <img class="info_img"  src="./image/welcome3.jpg"/>
         <div style="text-align: center;margin-top: 10px;font-size: 13px;">【我们希望你是这样的】</div>
-        <div>
-            1、具备独挡一面的精神，对移动产品有浓厚兴趣；<br />
-            2、具备一定的Android平台应用程序开发经验，对整个开发环节流程较为熟悉；<br />
-            3、具备Android后台开发平台及框架原理、开发测试工具、UI设计、项目构建能力，<br />
-            4、具备分析OOM具体问题，UI卡顿问题，解决不同os兼容某些控件的问题能力；</div>
+        <div class="index_line">
+            1、具备独挡一面的精神，对移动产品有浓厚兴趣；</div>
+        <div class="index_line">2、具备一定的Android平台应用程序开发经验，对整个开发环节流程较为熟悉；</div>
+            <div class="index_line">3、具备Android后台开发平台及框架原理、开发测试工具、UI设计、项目构建能力，</div>
+                <div class="index_line">4、具备分析OOM具体问题，UI卡顿问题，解决不同os兼容某些控件的问题能力；</div>
 
-        <div>加分项：参与或者自主进行开发过完整社交类或者聊天类APP应用程序</div>
+        <div class="index_line">加分项：参与或者自主进行开发过完整社交类或者聊天类APP应用程序</div>
 
         <div class="welcome-name">社区运营</div>
 
@@ -86,25 +86,25 @@
         <img class="info_img"  src="./image/welcome4.jpg"/>
         <div style="text-align: center;margin-top: 10px;font-size: 13px;">【我们希望你是这样的】</div>
 
-        <div>1、社区熟悉各类社区论坛，社交媒体的规则，有敏锐的市场洞察力</div>
+        <div class="index_line">1、社区熟悉各类社区论坛，社交媒体的规则，有敏锐的市场洞察力</div>
 
-        <div>3、对微博、微信运营有经验<br />
-            4、调用用户资源，进行话题引导，提升社区互动平台的活跃度。</div>
+        <div class="index_line">2、对微博、微信运营有经验</div>
+            <div class="index_line">3、调用用户资源，进行话题引导，提升社区互动平台的活跃度。</div>
 
-        <div>5、对新鲜事物具有强烈敏感度，善于把握网络热点话题和热门词汇；&nbsp;<br />
-            6、思维活跃脑洞大，逻辑清晰善探索，有一定的文字功底；</div>
+            <div class="index_line">4、对新鲜事物具有强烈敏感度，善于把握网络热点话题和热门词汇；&nbsp;</div>
+                <div class="index_line">5、思维活跃脑洞大，逻辑清晰善探索，有一定的文字功底；</div>
 
         <div class="welcome-name">心理学家</div>
         <div>你需要具备深厚的心理学背景，了解心理学领域最前沿的资讯，让用户感受到心理学带给普通人的变化</div>
         <img class="info_img"  src="./image/welcome5.jpg"/>
         <div style="text-align: center;margin-top: 10px;font-size: 13px;">【我们希望你是这样的】</div>
-        <div>1.	心理学博士或心理学在读博士</div>
-        <div>2.	编写心理咨询师培训教材，讲授心理学课程</div>
-        <div>3.	人工智能实验室科研项目研究</div>
-        <div>4.	担任心理咨询师，提供心理咨询服务</div>
-        <div>5.	做幸福创客心理业务顾问，指导幸福创客员工开展心理服务</div>
-        <div>加分项：社会心理学、认知心理学、神经科学、咨询心理学</div>
-        <div>心理学家岗位招聘人数众多，岗位设计不同，以上2-5项，满足其中一项即可。</div>
+                <div class="index_line">1、心理学博士或心理学在读博士</div>
+                <div class="index_line">2、编写心理咨询师培训教材，讲授心理学课程</div>
+                <div class="index_line">3、人工智能实验室科研项目研究</div>
+                <div class="index_line">4、担任心理咨询师，提供心理咨询服务</div>
+                <div class="index_line">5、做幸福创客心理业务顾问，指导幸福创客员工开展心理服务</div>
+                <div class="index_line">加分项：社会心理学、认知心理学、神经科学、咨询心理学</div>
+                <div class="index_line">心理学家岗位招聘人数众多，岗位设计不同，以上2-5项，满足其中一项即可。</div>
     </div>
 
     <!-- 分享 -->
