--- a/mobile/chanpinfuwu.html
+++ b/mobile/chanpinfuwu.html
@@ -43,7 +43,7 @@
 
     </div>
 
-    <img class="info_img" src="./image/four.jpg">
+    <img class="info_img" src="./image/chanpinfuwu2.jpg">
 
     <div class="chanpinfuwu_info">
         <span>为了身边的人更健康丶更幸福</span><br>
