--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -56,15 +56,16 @@
             <li>
                 <img src="image/martin.png"/>
                 <div class="expert_info">
-                    <div>Martin Seligman-学术顾问、积极心理学之父、宾夕法尼亚大学心理学教授</div>
+                    <div>Martin Seligman</div>
+                    <div>积极心理学之父、宾夕法尼亚大学心理学教授</div>
                     <div>“The “moon shot” galvanizing goal for positive psychology”</div>
-
                 </div>
             </li>
             <li>
                 <img src="image/felicia.png"/>
                 <div class="expert_info">
-                    <div>Felicia Huppert-学术顾问、剑桥大学幸福研究所所长丶剑桥大学神经科学及心理学终身教授</div>
+                    <div>Felicia Huppert</div>
+                    <div>剑桥大学幸福研究所所长丶剑桥大学神经科学及心理学终身教授</div>
                     <div>“A deep exploration of the psychology, neuroscience, human-computer interaction and artificial intelligence.”</div>
 
                 </div>
@@ -72,7 +73,8 @@
             <li>
                 <img src="image/daniel.png"/>
                 <div class="expert_info">
-                    <div>Daniel Kahneman-学术顾问、2002年诺贝尔经济学奖得奖者、普林斯顿大学心理学教授</div>
+                    <div>Daniel Kahneman</div>
+                    <div>2002年诺贝尔经济学奖得奖者、普林斯顿大学心理学教授</div>
                     <div>“A new insight for happiness”</div>
 
                 </div>
@@ -80,14 +82,16 @@
             <li>
                 <img src="image/richard.png"/>
                 <div class="expert_info">
-                    <div>Richard Layard 勋爵-学术顾问、伦敦政治经济学院教授、英国前首相布莱尔的首席顾问，提出“快乐经济学”理论<div>
+                    <div>Richard Layard 勋爵</div>
+                    <div>伦敦政治经济学院教授、英国前首相布莱尔的首席顾问，提出“快乐经济学”理论<div>
                     <div>“A happiness lesson from a new science”</div>
                 </div>
             </li>
             <li>
                 <img src="image/rafael.png"/>
                 <div class="expert_info">
-                    <div>Rafael Calvo-学术顾问、《积极的电脑运算：为了幸福和人类潜能的科技》作者、悉尼大学人机交互及软件工程系教授</div>
+                    <div>Rafael Calvo</div>
+                    <div>《积极的电脑运算：为了幸福和人类潜能的科技》作者、悉尼大学人机交互及软件工程系教授</div>
                     <div>“Using computing to make a positive influence on the world”</div>
                 </div>
             </li>
