--- a/mobile/used.html
+++ b/mobile/used.html
@@ -33,8 +33,8 @@
         <img class="info_img" src="./image/second.jpg"/>
 
 
-        <div class="vip-made" style="color: white; font-size: 14px; margin: 20px;">
-            <p style="margin-bottom: 25px">"Wi-Pro"，是幸福创客为企业提供的专业个性化服务，协助企业全方位地提高员工身心健康和幸福力，从而增加企业整体的工作效率，节省成本，保障企业和员工健康发展。无论是创业公司、中小企业，还是世界五百强公司，我们都将打破传统的昂贵收费模式，并以推陈出新的技术及智能化的专业服务，认真地为企业提供更全面、更精准、更便捷的合理化订制方案。
+        <div class="vip-made" style="color: white; font-size: 14px; margin: 10px;">
+            <p style="margin-bottom: 25px">"wi-Pro"，是幸福创客为企业提供的专业个性化服务，协助企业全方位地提高员工身心健康和幸福力，从而增加企业整体的工作效率，节省成本，保障企业和员工健康发展。无论是创业公司、中小企业，还是世界五百强公司，我们都将打破传统的昂贵收费模式，并以推陈出新的技术及智能化的专业服务，认真地为企业提供更全面、更精准、更便捷的合理化订制方案。
             </p>
             <p style="margin-bottom: 25px">我们拥有世界级的心理科学专家和高素质的服务团队，建立了与国际保持同步的企业心理健康服务标准，透过移动互联网和人工智能技术，致力为所有员工及其家属提供最专业丶最贴心的服务，协助企业维护员工的幸福与健康。
 
@@ -62,6 +62,13 @@
 
                 </p><p> &nbsp; &nbsp; &nbsp; &nbsp;组织综合优化咨询
                 </p>
+
+            <button class="qiyeshiyong">
+                <span>企业用户登录</span>
+            </button>
+            <button class="qiyeshiyong">
+                <span>查询wi-Pro</span>
+            </button>
 
             <p style="margin-top: 20px">我们团队成员负责的部分经典案例:</p>
 
