--- a/mobile/welcome.html
+++ b/mobile/welcome.html
@@ -35,7 +35,7 @@
     <img class="info_img" src="./image/us.jpg"/>
     <div class="welcome_content" style="padding-bottom:20px;">
         <div>幸福创客就是把一群人聚在一起，提供资源和机会，最有效率地发挥集体的聪明才智，创造幸福平台。我们称作公司，只是为了实现这些单独个体实现不了的事情。我们存在的意义是透过科技提升人类心理幸福，使之更幸福、更健康。</div>
-
+        <br />
         <div>在为梦想前进的路上，我们小步快跑，努力把产品打磨的足够扎实；我们在等待志同道合的你，在这条路上我们投入时间和热情，让事情变得有意义，创造令人兴奋的产品。</div>
 
 
@@ -50,19 +50,19 @@
             1、计算机相关专业，2年以上java开发工作经验；</div>
         <div class="index_line">2、熟悉Java语言，熟悉主流java开源框架，深入理解OOP、OOD思想，具有较强的分析设计能力，熟悉常用设计模式；<br />
         </div><div class="index_line"> 3、熟悉mysql数据库，有良好的数据库设计能力和sql编写能力；
-    </div><div class="index_line">  加分项：做过社区类或者聊天类的产品开发&nbsp;</div>
+    </div><div class="index_line">  加分项：做过社区类或者聊天类的产品开发</div>
 
 
         <div class="welcome-name">IOS开发工程师</div>
-        <div>你需要设计师最完美的想法开发出来，推送到所有使用苹果手机的用户端；</div>
+        <div>你需要设计师最完美的想法开发出来，推送到所有使用苹果手机的用户端</div>
 
         <img class="info_img"  src="./image/welcome2.jpg"/>
         <div style="text-align: center;margin-top: 10px;font-size: 13px;">【我们希望你是这样的】：</div>
         <div class="index_line">
             1、对移动产品有浓厚兴趣，注重用户体验；</div>
-        <div class="index_line">2、熟练掌握Objective-C语言，Mac&nbsp;OS&nbsp;X，Xcode和ios&nbsp;SDK&nbsp;开发环境；</div>>
+        <div class="index_line">2、熟练掌握Objective-C语言，Mac&nbsp;OS&nbsp;X，Xcode和ios&nbsp;SDK&nbsp;开发环境；</div>
         <div class="index_line"> 3、具备一定的IOS平台应用程序开发经验，对整个开发环节流程较为熟悉；</div>
-        <div class="index_line">4、具备IOS后台开发平台及框架原理、开发测试工具、UI设计、项目构建能力，</div>
+        <div class="index_line">4、具备IOS后台开发平台及框架原理、开发测试工具、UI设计、项目构建能力；</div>
         <div class="index_line">5、参与或自主进行开发过完整应用程序；熟悉App&nbsp;Store上架流程及规则；</div>
 
         <div class="index_line">加分项：做过社区类或者聊天类的apps产品开发</div>
@@ -75,7 +75,7 @@
         <div class="index_line">
             1、具备独挡一面的精神，对移动产品有浓厚兴趣；</div>
         <div class="index_line">2、具备一定的Android平台应用程序开发经验，对整个开发环节流程较为熟悉；</div>
-        <div class="index_line">3、具备Android后台开发平台及框架原理、开发测试工具、UI设计、项目构建能力，</div>
+        <div class="index_line">3、具备Android后台开发平台及框架原理、开发测试工具、UI设计、项目构建能力；</div>
         <div class="index_line">4、具备分析OOM具体问题，UI卡顿问题，解决不同os兼容某些控件的问题能力；</div>
 
         <div class="index_line">加分项：参与或者自主进行开发过完整社交类或者聊天类APP应用程序</div>
@@ -86,25 +86,25 @@
         <img class="info_img"  src="./image/welcome4.jpg"/>
         <div style="text-align: center;margin-top: 10px;font-size: 13px;">【我们希望你是这样的】</div>
 
-        <div class="index_line">1、社区熟悉各类社区论坛，社交媒体的规则，有敏锐的市场洞察力</div>
+        <div class="index_line">1、社区熟悉各类社区论坛，社交媒体的规则，有敏锐的市场洞察力；</div>
 
-        <div class="index_line">2、对微博、微信运营有经验</div>
-        <div class="index_line">3、调用用户资源，进行话题引导，提升社区互动平台的活跃度。</div>
+        <div class="index_line">2、对微博、微信运营有经验；</div>
+        <div class="index_line">3、调用用户资源，进行话题引导，提升社区互动平台的活跃度；</div>
 
-        <div class="index_line">4、对新鲜事物具有强烈敏感度，善于把握网络热点话题和热门词汇；&nbsp;</div>
-        <div class="index_line">5、思维活跃脑洞大，逻辑清晰善探索，有一定的文字功底；</div>
+        <div class="index_line">4、对新鲜事物具有强烈敏感度，善于把握网络热点话题和热门词汇；</div>
+        <div class="index_line">5、思维活跃脑洞大，逻辑清晰善探索，有一定的文字功底</div>
 
         <div class="welcome-name">心理学家</div>
         <div>你需要具备深厚的心理学背景，了解心理学领域最前沿的资讯，让用户感受到心理学带给普通人的变化</div>
         <img class="info_img"  src="./image/welcome5.jpg"/>
         <div style="text-align: center;margin-top: 10px;font-size: 13px;">【我们希望你是这样的】</div>
-        <div class="index_line">1、心理学博士或心理学在读博士</div>
-        <div class="index_line">2、编写心理咨询师培训教材，讲授心理学课程</div>
-        <div class="index_line">3、人工智能实验室科研项目研究</div>
-        <div class="index_line">4、担任心理咨询师，提供心理咨询服务</div>
-        <div class="index_line">5、做幸福创客心理业务顾问，指导幸福创客员工开展心理服务</div>
-        <div class="index_line">加分项：社会心理学、认知心理学、神经科学、咨询心理学</div>
-        <div class="index_line">心理学家岗位招聘人数众多，岗位设计不同，以上2-5项，满足其中一项即可。</div>
+        <div class="index_line">1、心理学博士或心理学在读博士；</div>
+        <div class="index_line">2、编写心理咨询师培训教材，讲授心理学课程；</div>
+        <div class="index_line">3、人工智能实验室科研项目研究；</div>
+        <div class="index_line">4、担任心理咨询师，提供心理咨询服务；</div>
+        <div class="index_line">5、做幸福创客心理业务顾问，指导幸福创客员工开展心理服务；</div>
+        <div class="index_line">加分项：社会心理学、认知心理学、神经科学、咨询心理学；</div>
+        <div class="index_line">心理学家岗位招聘人数众多，岗位设计不同，以上2-5项，满足其中一项即可</div>
     </div>
 
     <!-- 分享 -->
