--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -49,7 +49,7 @@
 
     <div class="expert">
 
-        <div style="margin-left: 10px;margin-right: 10px;margin-top: 20px;margin-bottom: 30px; font-size: 12px;">
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 20px;margin-bottom: 30px; font-size: 12px;">
             我们感谢全球顶尖的心理学家、经济学家及人工智能专家为幸福创客做出的指导！他们大都是创始团队成员的导师或研究伙伴，贴身指导着我们的成长。
         </div>
         <ul>
@@ -97,7 +97,7 @@
             </li>
         </ul>
 
-        <div style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+        <div class="oneline" style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
             全球华人积极心理学会（GCPPA）与幸福创客成为战略合作伙伴，我们热烈欢迎GCPPA的全球两百多位华人心理学家成为我们的专家库成员。我们会尽快更新专家库的信息。
         </div>
     </div>
