--- a/mobile/lianxiwomen.html
+++ b/mobile/lianxiwomen.html
@@ -33,8 +33,9 @@
 <div class="my_page">
 
     <div style="position: relative">
-        <div style="width: 50px;height: 50px; padding-top: 30px; background-color: #ff0000; position: absolute;float: left">lajflajflja<br>sahfkaf</div>
-        <div class="triangle-right" style="margin-left: 50px"></div>
+        <div style="width: 100px;height: 100px; position: absolute;float: left;background-color: #ff0000;"></div>
+        <div  style=" padding-top: 20px; position: absolute;float: left">幸福创客科技<br>有限公司（总部）</div>
+        <div class="triangle-right" style="margin-left: 100px"></div>
     </div>
 
 
