--- a/mobile/lianxiwomen.html
+++ b/mobile/lianxiwomen.html
@@ -32,12 +32,11 @@
 
 <div class="my_page">
 
-    <div style="position: relative">
-        <div style="width: 100px;height: 100px; position: absolute;float: left;background-color: #ff0000;"></div>
-        <div  style=" padding-top: 20px; position: absolute;float: left">幸福创客科技<br>有限公司（总部）</div>
-        <div class="triangle-right" style="margin-left: 100px"></div>
-    </div>
+    <img class="info_img_name" src="./image/zongbu.jpg"/>
 
+    <img class="info_img_name" src="./image/jiaoqiao.jpg"/>
+    <img class="info_img_name" src="./image/xianggang.jpg"/>
+    <img class="info_img_name" src="./image/meiguo.jpg"/>
 
 
 
@@ -86,7 +85,7 @@
             </li>
             <li class="footer_navbar_li">
                 <img src="./image/lianluowomen.png"/>
-                <a class="left" href="#">
+                <a class="left" href="./lianxiwomen.html">
                     <span class="text">联络我们</span>
                 </a>
             </li>
