--- a/mobile/used.html
+++ b/mobile/used.html
@@ -212,7 +212,7 @@
                 </li>
                 <li class="footer_navbar_li">
                     <img src="./image/lianluowomen.png"/>
-                    <a class="left" href="#">
+                    <a class="left" href="./lianxiwomen.html">
                         <span class="text">联络我们</span>
                     </a>
                 </li>
