--- a/mobile/lianxiwomen.html
+++ b/mobile/lianxiwomen.html
@@ -31,12 +31,13 @@
 </div>
 
 <div class="my_page">
-
+    <div style="text-align: center">
     <img class="info_img_name" src="./image/zongbu.jpg"/>
 
     <img class="info_img_name" src="./image/jiaoqiao.jpg"/>
     <img class="info_img_name" src="./image/xianggang.jpg"/>
     <img class="info_img_name" src="./image/meiguo.jpg"/>
+    </div>
 
 
 
