--- a/mobile/used.html
+++ b/mobile/used.html
@@ -63,12 +63,14 @@
                 </p><p> &nbsp; &nbsp; &nbsp; &nbsp;组织综合优化咨询
                 </p>
 
-            <button class="qiyeshiyong">
-                <span>企业用户登录</span>
-            </button>
-            <button class="qiyeshiyong">
-                <span>查询wi-Pro</span>
-            </button>
+            <div style="text-align: center">
+            <a class="qiyeshiyong" href="../user/enterprise/index.html">
+                <img src="./image/qiyedenglu.png">
+            </a>
+            <a class="qiyeshiyong" href="mailto:service@winnovator.com">
+                <img src="./image/chaxun.png">
+            </a>
+            </div>
 
             <p style="margin-top: 20px">我们团队成员负责的部分经典案例:</p>
 
