--- a/mobile/used.html
+++ b/mobile/used.html
@@ -160,7 +160,7 @@
                     <div class="case-name">联合利华<br />Unilever</div>
                 </div>
 
-                <div><img alt="联合利华"
+                <div><img style="  width: 60px;" alt="联合利华"
                      src="./image/unil.png">
                     </div>
                 <p>我们与联合利华(欧洲丶中国)在众多研究和发展项目上合作，为联合利华提供个性化的定制开发。包括联合利华产品对消费者的活力丶快乐丶幸福感，包括Magnum PQ（快乐商数）在大中华区及欧洲的测试。</p>
