--- a/user/enterprise/index.html
+++ b/user/enterprise/index.html
@@ -20,7 +20,7 @@
 
     <!--  these two css are to use only for documentation -->
     <link rel="stylesheet" type="text/css" href="assets/css/demo.css">
-
+    <script type="text/javascript" src="jquery-1.10.2.min.js"></script>
 
 
 </head>
@@ -134,12 +134,13 @@
     </div>
 
 </div>
-<div id="sign_up">
-    <h3 id="see_id" class="sprited" >Can I see some ID?</h3>
+
+<div id="sign_up" style=" display: none; left: 50%; margin-left: -223px; z-index: 1002; position: fixed;  margin-top: -117px">
+    <h3 id="see_id" class="sprited">Can I see some ID?</h3>
     <span>Please sign in using the form below</span>
     <div id="sign_up_form">
-        <label><strong>Username:</strong> <input class="sprited"/></label>
-        <label><strong>Password:</strong> <input class="sprited"/></label>
+        <label><strong>Username:</strong> <input class="sprited"></label>
+        <label><strong>Password:</strong> <input class="sprited"></label>
         <div id="actions">
             <a class="close form_button sprited" id="cancel" href="#">Cancel</a>
             <a class="form_button sprited" id="log_in" href="#">Sign in</a>
@@ -150,11 +151,52 @@
     <a id="close_x" class="close sprited" href="#">close</a>
 </div>
 
-<script type="text/javascript" src="jquery-1.10.2.min.js"/>
+
 <script type="text/javascript" src="jquery.lightbox_me.js"/>
-<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="assets/js/bootstrap.js"></script>
+
+<script>
+    /* 用法：
+     * var args = getArgs( ); // 从 URL 解析出参数
+     * var q = args.q || ""; // 如果定义了某参数，则使用其值，否则给它一个默认值
+     * var n = args.n ? parseInt(args.n) : 10;
+     */
+    var getArgs = function ()
+    {
+        var args = new Object( ); //声明一个空对象
+        var query = window.location.search.substring(1); // 取查询字符串，如从 http://www.snowpeak.org/testjs.htm?a1=v1&a2=&a3=v3#anchor 中截出 a1=v1&a2=&a3=v3。
+        var pairs = query.split("&"); // 以 & 符分开成数组
+        for(var i = 0; i < pairs.length; i++) {
+            var pos = pairs[i].indexOf('='); // 查找 "name=value" 对
+            if (pos == -1) continue; // 若不成对，则跳出循环继续下一对
+            var argname = pairs[i].substring(0,pos); // 取参数名
+            var value = pairs[i].substring(pos+1); // 取参数值
+            value = decodeURIComponent(value); // 若需要，则解码
+            args[argname] = value; // 存成对象的一个属性
+        }
+        return args; // 返回此对象
+    }
+
+    var args = getArgs();
+
+    var username = args["username"];
+    var password = args["password"];
+
+    $(".tian_content").click(function(){
+        if(!username){
+            $("#sign_up").lightbox_me({
+                centered: true,
+                preventScroll: true,
+                onLoad: function() {
+                    $("#sign_up").find("input:first").focus();
+                }
+            });
+        }
+    });
 
 
+
+</script>
 
 </body>
 </html>
