--- a/mobile/welcome.html
+++ b/mobile/welcome.html
@@ -34,9 +34,9 @@
 
     <img class="info_img" src="./image/us.jpg"/>
     <div class="welcome_content" style="padding-bottom:20px;">
-        <div>幸福创客就是把一群人聚在一起，提供资源和机会，最有效率地发挥集体的聪明才智，创造幸福平台。我们称作公司，只是为了实现这些单独个体实现不了的事情。我们存在的意义是透过科技提升人类心理幸福，使之更幸福、更健康。</div>
+        <div style="text-align: justify">幸福创客就是把一群人聚在一起，提供资源和机会，最有效率地发挥集体的聪明才智，创造幸福平台。我们称作公司，只是为了实现这些单独个体实现不了的事情。我们存在的意义是透过科技提升人类心理幸福，使之更幸福、更健康。</div>
         <br />
-        <div>在为梦想前进的路上，我们小步快跑，努力把产品打磨的足够扎实；我们在等待志同道合的你，在这条路上我们投入时间和热情，让事情变得有意义，创造令人兴奋的产品。</div>
+        <div style="text-align: justify">在为梦想前进的路上，我们小步快跑，努力把产品打磨的足够扎实；我们在等待志同道合的你，在这条路上我们投入时间和热情，让事情变得有意义，创造令人兴奋的产品。</div>
 
 
         <div class="welcome-name">后端工程师</div>
@@ -104,7 +104,7 @@
         <div class="index_line">4、担任心理咨询师，提供心理咨询服务；</div>
         <div class="index_line">5、做幸福创客心理业务顾问，指导幸福创客员工开展心理服务；</div>
         <div class="index_line">加分项：社会心理学、认知心理学、神经科学、咨询心理学；</div>
-        <div class="index_line">心理学家岗位招聘人数众多，岗位设计不同，以上2-5项，满足其中一项即可</div>
+        <div>心理学家岗位招聘人数众多，岗位设计不同，以上2-5项，满足其中一项即可</div>
     </div>
 
     <!-- 分享 -->
