--- a/user/enterprise/index.html
+++ b/user/enterprise/index.html
@@ -135,21 +135,21 @@
 
 </div>
 
-<!--<div id="sign_up" style=" display: none; left: 50%; margin-left: -223px; z-index: 1002; position: fixed;  margin-top: -117px;background: #eef2f7;border: 1px solid #536376;">-->
-    <!--<h3 id="see_id" class="sprited">Can I see some ID?</h3>-->
-    <!--<span>Please sign in using the form below</span>-->
-    <!--<div id="sign_up_form">-->
-        <!--<label><strong>Username:</strong> <input class="sprited"></label>-->
-        <!--<label><strong>Password:</strong> <input class="sprited"></label>-->
-        <!--<div id="actions">-->
-            <!--<a class="close form_button sprited" id="cancel" href="#">Cancel</a>-->
-            <!--<a class="form_button sprited" id="log_in" href="#">Sign in</a>-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<h3 id="left_out" class="sprited">Feeling left out?</h3>-->
-    <!--<span>Don't be sad, just <a href="#">click here</a> to sign up!</span>-->
-    <!--<a id="close_x" class="close sprited" href="#">close</a>-->
-<!--</div>-->
+<div id="sign_up" style=" display: none; left: 50%; margin-left: -223px; z-index: 1002; position: fixed;  margin-top: -117px;background: #eef2f7;border: 1px solid #536376;">
+    <h3 id="see_id" class="sprited">Can I see some ID?</h3>
+    <span>Please sign in using the form below</span>
+    <div id="sign_up_form">
+        <label><strong>Username:</strong> <input class="sprited"></label>
+        <label><strong>Password:</strong> <input class="sprited"></label>
+        <div id="actions">
+            <a class="close form_button sprited" id="cancel" href="#">Cancel</a>
+            <a class="form_button sprited" id="log_in" href="#">Sign in</a>
+        </div>
+    </div>
+    <h3 id="left_out" class="sprited">Feeling left out?</h3>
+    <span>Don't be sad, just <a href="#">click here</a> to sign up!</span>
+    <a id="close_x" class="close sprited" href="#">close</a>
+</div>
 
 
 <script type="text/javascript" src="jquery.lightbox_me.js"/>
@@ -182,17 +182,17 @@
     var username = args["username"];
     var password = args["password"];
 
-//    $(".tian_content").click(function(){
-//        if(!username){
-//            $("#sign_up").lightbox_me({
-//                centered: true,
-//                preventScroll: true,
-//                onLoad: function() {
-//                    $("#sign_up").find("input:first").focus();
-//                }
-//            });
-//        }
-//    });
+    $(".tian_content").click(function(){
+        if(!username){
+            $("#sign_up").lightbox_me({
+                centered: true,
+                preventScroll: true,
+                onLoad: function() {
+                    $("#sign_up").find("input:first").focus();
+                }
+            });
+        }
+    });
 
 
 
